--- a/package.json
+++ b/package.json
@@ -26,23 +26,24 @@
     "@rollup/plugin-terser": "^0.3.0",
     "@types/color": "^3.0.3",
     "@types/react": "^18",
-    "@types/react-calendar": "^3.1.0",
     "@types/react-dom": "^18",
     "@types/styled-components": "^5",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
     "concurrently": "^5.1.0",
+    "esbuild": "0.19.5",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
+    "esmify": "^2.1.1",
     "install-peers-cli": "^2.2.0",
-    "postcss": "^7.0.32",
+    "postcss": "^8.4.31",
     "prepend-file": "^1.3.1",
     "prettier": "^2.0.2",
     "rollup": "^2.3.1",
     "rollup-plugin-cleanup": "^3.2.1",
-    "rollup-plugin-postcss": "^3.1.2",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-typescript2": "^0.27.0",
     "rollup-plugin-visualizer": "^5.8.3",
     "ts-node": "^8.8.1",
@@ -70,10 +71,11 @@
     "dist"
   ],
   "dependencies": {
+    "browser-resolve": "^2.0.0",
     "color": "^4.2.3",
     "date-fns": "^2.14.0",
     "goober": "^2.1.11",
-    "react-calendar": "^3.1.0"
+    "react-calendar": "^4.6.1"
   },
   "resolutions": {
     "**/@typescript-eslint/eslint-plugin": "^5.26.0",
