--- a/package.json
+++ b/package.json
@@ -73,8 +73,10 @@
   "dependencies": {
     "browser-resolve": "^2.0.0",
     "color": "^4.2.3",
-    "date-fns": "^2.14.0",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "goober": "^2.1.11",
+    "react-bootstrap": "^2.10.4",
     "react-calendar": "^4.6.1"
   },
   "resolutions": {
